--- a/web/styles/index.scss
+++ b/web/styles/index.scss
@@ -1,9 +1,9 @@
 :global {
     // global style here
+    background-color: ghostwhite;
     .logo-spin {
         animation: App-logo-spin infinite 3s linear;
-    }
-
+    } 
     @keyframes App-logo-spin {
         from {
             transform: rotate(0deg);
@@ -12,4 +12,71 @@
             transform: rotate(360deg);
         }
     }
+    .whiteFrame {
+        width: 400px;
+        background-color: white;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        padding: 15px;
+        position: absolute;
+    }
+    .text {
+        font-size: 20px;
+    }
+    .error {
+            color: red;
+        }
+    .text-left {
+        cursor: pointer;
+        float: left;
+        color: deepskyblue;
+        &:hover {
+            text-decoration-line: underline;
+        }
+    }
+    .text-right {
+        cursor: pointer;
+        float: right;
+        color: deepskyblue;
+        &:hover {
+            text-decoration-line: underline;
+        }
+    }
+    input {
+        border-radius: 1rem;
+        width: 400px;
+        height: 35px;
+        font-size: 20px;
+        margin-top: 10px;
+        margin-bottom: 20px;
+        &:focus {
+            border: 2px solid #242526;
+            outline: none;
+        }
+    }
+    .buttonSignIn {
+        cursor: pointer;
+        background-color: deepskyblue;
+        border-radius: 5px;
+        height: 40px;
+        color: white;
+        padding-top: 6px;
+        padding-bottom: 6px;
+        padding-left: 20px;
+        padding-right: 20px;
+        margin: 10px;
+        border: 0px;
+    }
+    .center {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-content: center;
+        .item {
+            text-align: center;
+            align-items: center;
+        }
+    }
+    .pic {
+        margin: 25px;
+    }   
 }
